<resources>
    <string name="app_name">QuizApp</string>
    <string name="welcome">Welcome!</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="e_g_john">e.g John</string>
    <string name="start">Start</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="quiz_image_of_flag">Quiz Image of Flag</string>
    <string name="submit">Submit</string>
    <string name="choose_amount_of_questions">Choose amount of questions</string>
    <string name="quiz_image">quiz_image</string>
</resources>