<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quiz_app"
        android:textColor="@color/white_light_gray"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/MyCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/black_blue"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvEnter_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/please_enter_your_name"
                android:textColor="@color/light_dark_blue"
                android:textSize="16sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_light_gray"
                    android:hint="@string/e_g_john"
                    android:inputType="textCapWords"
                    android:textColor="@color/black_blue"
                    android:textColorHint="@color/light_dark_blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
               android:layout_gravity="center"
                android:text="@string/choose_amount_of_questions"
                android:textColor="@color/light_dark_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/btnLeftArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white_light_gray"
                    android:text="-"
                    android:textColor="@color/dark_blue"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/questionsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="8dp"
                    android:gravity="center"
                    android:text="1/10"
                    android:textColor="@color/black_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/btnRightArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white_light_gray"
                    android:text="+"
                    android:textColor="@color/dark_blue"
                    android:textSize="32sp" />


            </LinearLayout>

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/light_dark_blue"
                android:text="@string/start"
                android:textColor="@color/white_light_gray"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>

